[package]
name = "random-microservice"
version = "0.1.0"
authors = ["Ryan A Morrison <ryan@ryanamorrison.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
dotenv = "0.13"
env_logger = "0.5"
hyper = "0.12"
log = "0.4"
rand = "0.5"
